--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -1,3 +1,15 @@
+
+
+服务器  工具  PHP  数据库  ajax  跨域问题  promise
+
+### Tips
+
+##### 中文存储的编码解码
+
+编码:encodeURLComponent(value);
+
+解码：decodeURLComponent(cedeValue);
+
 ### 服务器
 
 ##### 应用程序分类
@@ -20,7 +32,7 @@ http请求报文
 
 ##### 前后端交互流程
 
-![前后端交互流程图](E:\file\day21\前后端交互流程图.png)
+![前后端交互流程图](images\前后端交互流程图.png)
 
 ### tools
 
@@ -213,73 +225,6 @@ $_REQUEST  均接收get或post方式的数据
 mysql_num_rows($res)//获取行数
 
 
-
-### cookie会话跟踪技术
-
-##### 概念
-
-一个网站从打开到浏览（包括这个网页的其他子页面）到关闭浏览器的整个过程叫做一个会话
-
-cookie只能存字符串，有大小限制（4kb）,数量限制，不能跨域读取，有时效，路径问题(子目录下可以访问外层目录的cookie)
-
-设置cookie：document.cookie = "username = zhangsan";document.cookie = "age=18"
-
-​	多次存储不同变量，不会被覆盖
-
-获取：document.cookie  //得到所有存储过的变量
-
-~~~javascript
-document.cookie = "username = zhangsan";
-document.cookie = "age = 18";
-console.log(document.cookie);//"username = zhangsan;age = 18"得到所有cookie
-~~~
-
-##### 时效性expires
-
-cookie具有时效性，默认时效为一个会话期。可设置更改
-
-~~~javascript
-var date = new Date();
-date.setDate(date.getDate()+1);
-//使用expires将过期时间改为1天之后
-document.cookie = "username = zhangsan;expires"+date;
-
-~~~
-
-##### 解析所有cookie
-
-多个cookie获取得到是一个拼接的字符串:"username = zhangsan;age = 18"
-
-~~~javascript
-//将所有cookie拼接的字符串转换成一个对象
-var cookie = document.cookie;
-var arr = cookie.split(';');
-var obj = {};
-arr.forEach(function(item){
-    var subArr = item.split('=');
-    obj[subArr[0]] = subArr[1];
-});
-~~~
-
-
-
-##### 存储目录
-
-子目录下可以访问上级目录的cookie，上级目录无法访问子目录的cookie。（故网站登录变量需要存在外层目录，方便读取）采用path设置
-
-document.cookie = "username = zhangsan;path = /";//表示存储在根目录下
-
-##### 编码
-
-encodeURIComponent()//将中文转换成编码格式，避免乱码
-
-decodeURIComponent();//将编码格式的字符串转成中文
-
-~~~javascript
-var username = '李四';
-document.cookie = "username="+encodeURIComponent(username);
-console.log(decodeURIComponent("%E6%9D%8E%E5%9B%9B"));//编码为李四中文的编码
-~~~
 
 
 
