--- a/js/闭包&继承.md
+++ b/js/闭包&继承.md
@@ -54,3 +54,50 @@ var f2 = fn();
 
 ###### 调用后
 
+### 继承
+
+继承是指两个类之间的关系，子类共享父类的属性和方法。js的继承都是基于原型实现的
+
+面向对象：封装，继承，多态（重写，重载）
+
+##### 原型链的继承
+
+通过将构造函数的原型对象指针prototype指向一个由需要继承的构造函数生成的实例。
+
+原型链：实例的\_proto_指向构造函数的prototype
+
+Cat.prototype = new Animal();
+
+~~~javascript
+//基于原型链实现继承
+function Animal(){//父类
+    this.name = "animal";
+    this.say = function(){
+        console.log(this.name);
+    }
+}
+Animal.prototype.eat = function(food){
+    console.log(this.name +" is eating "+ food);
+}
+function Cat(){//子类
+    //此处定义自己的name，使用时先在自己属性上查找name，没有再去继承的prototype上查找
+    this.name = "cat";
+}
+//此时Cat将拥有Animal上所有的属性，并可以使用Animal对象原型上的所有方法
+Cat.prototype = new Animal();//子类继承父类的属性与方法
+
+//子类新增属性和方法必须在继承之后，因为在继承时改变了原有的prototype指向，原有对象原型的方法就无法访问
+Cat.prototype.init = function(){}
+
+var tom = new Cat();
+tom.say();//cat
+tom.eat("fish");//cat is eating fish
+
+//instanceof判断tom是否是Animal的实例
+console.log(tom instanceof Animal);//true
+~~~
+
+
+
+
+
