--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -56,7 +56,21 @@ localhost,root
 
 <http://rap2.taobao.org/>
 
+
+
 随机数据生成的API：<https://github.com/nuysoft/Mock/wiki/Mock.Random>
+
+常用规则：
+
+* +1  表示数据id自动加一
+* 5   表示个数为5个，比如数组个数为5
+
+常用初始值：
+
+- 随机图片 @image(290x340,@color,#fff,png,@word)
+- 随机名字 @title(10,20)  随机名字，长度为10到20
+- 随机数@natural(1,20)  随机生成1-20之间的数字
+- 随机小数@float(100,10000,2,2)  最小，最大，小数位数最小，小数位数最大
 
 ##### bootstrap
 
