--- a/js/闭包&继承.md
+++ b/js/闭包&继承.md
@@ -48,11 +48,43 @@ var f2 = fn();
 
 ##### 闭包原理
 
-###### 调用前
+外层函数的活动对象不能被释放，缺点是占内存
 
-###### 调用时
+###### numCompany调用前
 
-###### 调用后
+window全局下存在numCompany函数，fn变量(变量提升undefined)，此时是numCompany函数执行前的状态
+
+对于numCompany函数而言，存在函数体本身以及函数的作用域链对象，作用域链中只有window
+
+![1-调用前](images/1-调用前.png)
+
+###### numCompany调用时
+
+numCompany函数执行时，产生其活动对象，并加入到其作用域链对象中。函数执行返回getNum函数给fn，故产生了getNum函数的函数体对象与作用域链对象，改作用域链包含window与外层函数numCompany活动对象
+
+![2-调用时](images/2-调用时.png)
+
+###### numCompany调用后
+
+fn在内存中的值不再是undefine，得到fn函数对象本身(也是getNum函数体)的地址，numCompany()的活动对象出numCompany的作用域链，但是由于活动对象还有别的引用存在，故只出栈不销毁。
+
+（fn存在，其指向的函数体存在，该函数体中指向的作用域链就存在，该作用域链中指向的活动对象就存在）
+
+![3-调用后](images/3-调用后.png)
+
+###### fn调用时
+
+fn执行时，产生fn的活动对象(没有自己的变量为空)，并加入到fn函数的作用域链中。当执行n++时，先查看作用域链的顶部，即自己的活动对象中，没有n，在作用域链中往下一个找，找到外层函数NumCompany的活动对象，其中有n，则进行了n++,n=2
+
+![4-调用fn](/images/4-调用fn.png)
+
+###### fn调用后
+
+删除fn作用域链上的fn的活动对象，并销毁fn的活动对象。下次调用时又重复产生fn的活动对象，执行之后又销毁。但是每次找到的n都是在外层函数中的同一个n。
+
+![5-调用fn后](/images/5-%E8%B0%83%E7%94%A8fn%E5%90%8E.png)
+
+
 
 ### 继承
 
