--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -70,6 +70,7 @@ localhost,root
 - 随机图片 @image(290x340,@color,#fff,png,@word)
 - 随机名字 @title(10,20)  随机名字，长度为10到20
 - 随机数@natural(1,20)  随机生成1-20之间的数字
+- 数组的随机内容['@image(220x220,@color,#fff,png,@world )']
 - 随机小数@float(100,10000,2,2)  最小，最大，小数位数最小，小数位数最大
 
 ##### bootstrap
