--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -157,6 +157,47 @@ $_REQUEST  均接收get或post方式的数据
 * is_array()是不是数组
 * is_double()是不是浮点数 
 
+##### 字符串
+
+###### 切割字符串为数组
+
+$array = explode(separator,string,limit);
+
+* separator ：字符串，规定在哪里拆分字符串；
+* string：要拆分成数组的字符串；
+* limit ：数字，规定返回的数组元素的数目，可选；
+
+~~~php
+//前端获取到的参数为一个字符串，按照逗号连接的元素
+$comments = $_GET["comments"];
+$list = explode(',',$comments);
+~~~
+
+
+
+###### 字符串拼接：.
+
+使用.拼接
+
+$sql."and id=1"
+
+###### 字符串切割
+
+~~~php
+$str= '积分商城扣除积分 1订单号: EE20181017143211467596 OPENID:sns_wa_oZhUB5XlQXtWSce6WjMR90srTNOU';
+$result1 = strstr($str,' OPENID',1); // 积分商城扣除积分 1订单号: EE20181017143211467596
+$result2 = strstr($result1 ,'订单号: '); // 订单号: EE20181017143211467596
+$result3 = substr($result2 , 11); // EE20181017143211467596
+~~~
+
+```php
+substr(string,start,length)
+//string 必需。规定要返回其中一部分的字符串
+//start 必需。规定在字符串的何处开始。
+//length 可选。规定被返回字符串的长度。默认是直到字符串的结尾。
+$str = substr($str,0,-1);//截取掉最后一个字符
+```
+
 ##### 数组/对象
 
 * 索引数组  $arr = array(1,5,7,3);
@@ -169,7 +210,7 @@ $_REQUEST  均接收get或post方式的数据
 
   $testArray = array('name'=>"zhang",'age'=>17);
 
-  获取：array["name"]
+  获取：$testArray["name"]
 
   转json：json_encode(testArray);
 
@@ -192,6 +233,23 @@ $_REQUEST  均接收get或post方式的数据
   //[{"id":15,"name":"qian","age":10},{"id":15,"name":"feng","age":20}]
   ?>
   ~~~
+
+##### 遍历索引数组
+
+~~~
+$arr = array('http://www.cnblogs.com/','博客园','PHP教程'); 
+foreach($arr as $value){ 
+echo $value.'<br />'; 
+} 
+~~~
+
+##### 遍历关联数组
+
+~~~
+
+~~~
+
+
 
 ### 数据库
 
@@ -238,10 +296,6 @@ $_REQUEST  均接收get或post方式的数据
 ~~~~
 
 mysql_num_rows($res)//获取行数
-
-
-
-
 
 
 
