--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -6,7 +6,7 @@
 
 ##### 中文存储的编码解码
 
-编码:encodeURLComponent(value);
+编码：encodeURLComponent(value);
 
 解码：decodeURLComponent(cedeValue);
 
@@ -65,7 +65,7 @@ localhost,root
 * +1  表示数据id自动加一
 * 5   表示个数为5个，比如数组个数为5
 
-常用初始值：
+常用`初始值`：
 
 - 随机图片 @image(290x340,@color,#fff,png,@word)
 - 随机名字 @title(10,20)  随机名字，长度为10到20
@@ -87,14 +87,16 @@ localhost,root
 
 ~~~javascript
 <?php
-	//输出hello world 语句末尾必须加分号，注释方式同js一样
+	//输出hello world 
+	//语句末尾必须加分号
+	//注释方式同js一样
 	echo 'hello world';
 ?>
 ~~~
 
 ##### 变量与字符串拼接
 
-变量无需声明，采用$开头，使用也要带上$
+变量无需声明就可以直接使用，采用$开头，使用也要带上$
 
 字符串拼接采用 .
 
@@ -161,9 +163,9 @@ $_REQUEST  均接收get或post方式的数据
 
 ###### 切割字符串为数组
 
-$array = explode(separator,string,limit);
+$array = explode(separator , string [, limit]);
 
-* separator ：字符串，规定在哪里拆分字符串；
+* separator ：字符串，规定使用什么分割符拆分字符串；
 * string：要拆分成数组的字符串；
 * limit ：数字，规定返回的数组元素的数目，可选；
 
@@ -175,7 +177,7 @@ $list = explode(',',$comments);
 
 
 
-###### 字符串拼接：.
+###### 字符串拼接：`.`
 
 使用.拼接
 
@@ -403,9 +405,9 @@ ajax.open('GET',url,true);其中的的url就是一个接口
 
 ### 跨域问题
 
-##### 同源策略
+##### 浏览器的同源策略
 
-同源策略：浏览器安全策略，保障非同源之间数据访问的安全性。默认不予许非同源的资源 直接访问
+同源策略：浏览器安全策略，保障非同源之间数据访问的安全性。默认不予许非同源的资源直接访问。服务器之间没有跨域
 
 URL：协议://域名:端口号/路径名称?查询字符串#位置标识符
 
