--- a/js/闭包&继承.md
+++ b/js/闭包&继承.md
@@ -60,7 +60,7 @@ window全局下存在numCompany函数，fn变量(变量提升undefined)，此时
 
 ###### numCompany调用时
 
-numCompany函数执行时，产生其活动对象，并加入到其作用域链对象中。函数执行返回getNum函数给fn，故产生了getNum函数的函数体对象与作用域链对象，改作用域链包含window与外层函数numCompany活动对象
+numCompany函数执行时，产生其活动对象，并加入到其作用域链对象中。函数执行返回getNum函数给fn，故产生了getNum函数的函数体对象与作用域链对象，该作用域链包含window与外层函数numCompany活动对象
 
 ![2-调用时](images/2-调用时.png)
 
