--- a/三阶段/vue/组件.md
+++ b/三阶段/vue/组件.md
@@ -86,7 +86,9 @@ const app = new Vue({
 
 * components 定义组件的子组件
 
-* data-数据属于组件本身，组件中的内容通过数据渲染。但是一般来自于父组件，通过props获得
+* data-数据属于组件本身，组件中的内容通过数据渲染。
+
+  注意子组件的data必须写成一个函数，返回数据的对象。因为子组件是复用的，直接写成对象的话将导致一个组件修改data会影响到其他所有组件。
 
 ```javascript
  // 定义组件
