--- a/三阶段/react/杂.md
+++ b/三阶段/react/杂.md
@@ -130,6 +130,74 @@ obj.a() //1
 
 ## 节流/防抖
 
+
+
+## static 方法
+
+在类(calss)中，通过static来定义静态方法，由类的本身调用类的静态方法，而在类的实例上无法调用静态方法，因此在静态方法内不能使用this，因为实例还没有实例化。
+
+~~~js
+class MyClass {
+  static staticMethod() {
+    return 'static method has been called.';
+  }
+}
+~~~
+
+## 当在浏览器输入url...
+
+在浏览器中输入一个url，向浏览器发送一个请求，经过了什么过程
+
+### 处理过程
+
+#### 请求阶段
+
+* 浏览器将url发送给DNS服务器
+* DNS服务器将域名解析为IP地址，并根据IP地址找到对应服务器
+* 服务器接收到请求，客户端与服务器之间建立连接
+
+#### 响应阶段
+
+* 服务端收到请求后，根据路径找到相应项目
+* 找到项目后，立即将响应信息放在响应头中，通过http发送给客户端，并整理需要返回的数据
+  * 响应头：用于服务器告诉浏览器数据的长度，当浏览器接收数据长度等于响应头数据长度时说明数据接收完毕
+* 整理好返回数据后通过http发送给客户端，直到客户端接受完毕
+
+#### 渲染阶段
+
+浏览器接收到来自客户端的数据之后开始进行渲染
+
+* 将html渲染为DOM树
+* 将css渲染为CSSOM树
+* 将DOM树与CSSOM树整合为渲染树(renderTree)
+* 根据渲染树进行渲染和展示
+* 遇到script时会执行并阻塞渲染
+
+### 三次握手/四次挥手
+
+#### 三次握手
+
+浏览器在给服务器传送数据之前，先进行三次握手，握手成功之后才可以传输数据
+
+* 浏览器先服务器发送SYN码，告诉服务器我要建立连接
+* 浏览器接收到SYN码，并返回客户端SYN+ACK码，表示我可以建立连接
+* 客户端接收到ACK码，验证成功，则客户端与服务端之间建立起连接
+
+#### 四次挥手
+
+数据传输完成之后，断开数据连接
+
+* 数据传输完毕，客户端会发送FIN码给服务端，告诉它发送完毕
+* 服务端接受数据完毕后，发送ACK码给浏览器，告诉它你可以关闭数据通道了
+* 服务端发送完毕之后，发送FIN给浏览器，告诉它数据发送完毕
+* 客户端接收完数据，同样发送ACK码给服务端，表示数据接收完毕，你可以关闭
+
+
+
+
+
+react的setSate方法
+
 函数立即执行，可以在函数定义前面添加一个+号
 
 vue.$set   vue数据变化但是视图没有更新，通过数组下标更改数据 ，，数据响应的原理defineProperty
@@ -144,33 +212,80 @@ async await   es6新增方法
 
 类型为checkbox的input标签，它绑定的label可以样式改为圆，替换input的原始样式，里面的√用after伪类写。。特殊字符
 
-new一个对象时：生成对象、绑定this、执行constructor的代码，返回对象
+* new一个对象过程
+  * 创建空对象{}
+  * 设置空对象的constructor属性为构造函数的名称，设置空对象的\__proto__指向构造函数的prototype
+  * 绑定this，并执行constructor的代码
+  * 返回新对象的地址
 
-diff算法，虚拟dom，以及与正式dom对比，再更新dom
+* diff算法与虚拟dom，以及与正式dom对比，再更新dom
+  * 虚拟dom实际就是一个js对象，数据发生变化时得到新的虚拟DOM，新旧虚拟DOM采用diff算法的到patch(需要修改的部分)，将这个patch给浏览器进行真实DOM的渲染
+  * 虚拟DOM大大减少了DOM操作，减少重绘与回流，提高性能
+  * diff算法，react将新旧虚拟DOM进行同层比对，首先比对顶层虚拟DOM是否一致，如果一致则对比下一层，当遇到不一致就停止比对，将此DOM及以下的DOM删除掉，从新生成新的虚拟DOM，然后替换原始页面的DOM。
 
-vue 组件的销毁：切换路由导致切换组件，或者使用this.$distory进行销毁
+* vue 组件的销毁
+  * 切换路由导致切换组件，生命周期destroyed
+  * 使用this.$distory进行销毁
 
-js的垃圾回收机制：
+* js的垃圾回收机制
+
+  * 可达性：js内存管理的主要概念，值内存中可以某种方式访问的值。
+
+  * 垃圾回收算法，从根部访问开始，标记它及它的引用，再访问它的引用，类推到没有可访问的值，最后没有被标记的值就是垃圾，进行删除
 
 node寻找模块的过程
 
-get请求存在缓存，发请求的时候需要带上时间戳或随机数
+* get请求存在缓存，发请求的时候需要带上时间戳或随机数
 
-localeCompare中文按拼音排序
+  在IE浏览器下，第二次使用相同的url进行请求时，浏览器会自动读取缓存文件，导致无法获得服务器最新的数据，解决办法是发出请求时带上此刻的时间戳或者带一个随机数。
+
+* a.localeCompare(b) 中文字符串按照拼音字母排序，a小于b则返回小于0的数，大于则返回大于0的数，等于则返回0
+
+  ~~~js
+  var list = ["张三","李四","王二","麻子"]
+  list.sort((a,b)=>{
+  	return a.localeCompare(b)
+  })
+  console.log(list) // ["李四", "麻子", "王二", "张三"]
+  ~~~
+
+  
 
 vue : hash模式的根据hash值去切换组件，history模式是根据h5的
 
-* ES6的 set()---数组去重
+* 数组去重
 
-  ~~~js
-  arr=[a,b,a,c,s,a,a,v]
-  var set=new Set();
-  arr.forEach((item)=>{
-  	set.add(item)
-  })
-  arr = [...set]
-  console.log(arr) //[a,b,c,s,v]
-  ~~~
+  * ES6的 set()数据结构
+
+    ~~~js
+    var arr=[a,b,a,c,s,a,a,v]
+    var set=new Set();
+    arr.forEach((item)=>{
+    	set.add(item)
+    })
+    arr = [...set]
+    console.log(arr) //[a,b,c,s,v]
+    ~~~
+
+  * 新建空数组+indexOf()
+
+    ~~~js
+    var arr = [1,3,5,7,9,1,9,5,9,3,5,11,13];
+    var newArr = []
+    arr.forEach(item => {
+    if(newArr.indexOf(item) === -1){
+    		newArr.push(item)
+    	}
+    })
+    ~~~
+
+  * 对象键值对方法-速度快，但是较占内存
+
+    ~~~
+    
+    ~~~
+
+    
 
 * padding，margin使用百分比取值时，是根据元素的宽度来的
 
