--- a/三阶段/项目上线.md
+++ b/三阶段/项目上线.md
@@ -126,6 +126,8 @@ server {
 	}
     location '/jsonp/' {
         proxy_pass https://mce.mogucdn.com;
+        // 存在路径重写的话
+        rewrite "^/sc/(.*)$" /$1 break;
     }
 }
 ~~~
