--- a/三阶段/react/杂.md
+++ b/三阶段/react/杂.md
@@ -249,7 +249,6 @@ node寻找模块的过程
   console.log(list) // ["李四", "麻子", "王二", "张三"]
   ~~~
 
-  
 
 vue : hash模式的根据hash值去切换组件，history模式是根据h5的
 
@@ -267,7 +266,7 @@ vue : hash模式的根据hash值去切换组件，history模式是根据h5的
     console.log(arr) //[a,b,c,s,v]
     ~~~
 
-  * 新建空数组+indexOf()
+  * 新建空数组+indexOf()/includes()
 
     ~~~js
     var arr = [1,3,5,7,9,1,9,5,9,3,5,11,13];
@@ -284,8 +283,6 @@ vue : hash模式的根据hash值去切换组件，history模式是根据h5的
     ~~~
     
     ~~~
-
-    
 
 * padding，margin使用百分比取值时，是根据元素的宽度来的
 
