--- a/三阶段/vue/组件.md
+++ b/三阶段/vue/组件.md
@@ -1,4 +1,4 @@
-## components：组件声明
+## components组件
 
 ### 注册组件
 
@@ -80,6 +80,19 @@ const app = new Vue({
 </div>
 ```
 
+#### 组件上绑事件
+
+直接在使用子组件时绑定事件来调用父组件的方法时，无法成功响应(似乎完全没调用)，需要使用.active。
+
+~~~vue
+ <Com @click.native="change"></Com>{{str}}
+ 
+change(){
+    console.log(1)
+    this.str = "eee"
+}
+~~~
+
 ### 组件属性
 
 组件中的属性同vue实例类似，部分写法不同，如data的写法，必须是一个有返回的函数
@@ -123,6 +136,8 @@ const helloComponent={
 	template:"<div><h1>父组件下，使用子组件</h1><son-component></son-component></div>"
 }
 ```
+
+## 组件间数据传递
 
 ### props-数据来源于父组件
 
@@ -285,7 +300,15 @@ created(){
 }
 ~~~
 
-### is属性绑定组件
+### this.$parent/this.$children
+
+在组件中直接使用this.$parent.xxx可以获取到组件的方法与数据
+
+### 子组件给ref
+
+给子组件ref=“xxx"，父组件通过this.refs.xxx.yyy可以获取到子组件的方法与属性，如清空子组件输入框的内容
+
+## is属性绑定组件
 
 应用于动态组件时组件名称绑定以及特殊标签，如table内不能放置除了tr外的其他标签，就需要通过组件的绑定
 
@@ -322,7 +345,7 @@ table内不能放置除了tr外的其他标签
 </table>
 ~~~
 
-### 插槽slot
+## 插槽slot
 
 在使用定义的组件时，组件标签添加需要传递的元素，可以实现使用相同的组件，获得不同dom结构的效果。
 
