--- a/三阶段/wechat/小程序.md
+++ b/三阶段/wechat/小程序.md
@@ -145,15 +145,15 @@ bindchange
 
 #### 更新数据
 
-setData({}) 进行更新数据，此方法可以触发页面重新渲染，直接this.data.xxx进行设置时不会触发页面渲染。
+* this.data.xxx进行设置时不会触发页面渲染。用于设置不需要渲染的数据
+
+* setData({}) 进行更新数据，此方法可以触发页面重新渲染。更新需要渲染的数据
 
 ~~~js
 this.setData({
     list: this.data.list.concat(newList)
 })
 ~~~
-
-
 
 #### 模板
 
@@ -403,15 +403,17 @@ wx.chooseLocation({
         })
     ~~~
 
+#### 组件
+
+组件之间传值
 
 
 
+### 微信小程序UI
 
+#### mpvue*
 
-
-
-
-
+#### WePY
 
 
 
