--- a/js/后台相关.md
+++ b/js/后台相关.md
@@ -40,7 +40,7 @@ http请求报文
 
 集成开发环境，W:表示window系统，A:Apache服务器，M:MySQL数据库，P:php
 
-php代码必须放在根目录(www directory)下，因为本地的apache服务器是开在根目录下的，只有这里面才有PHP的执行环境，才有PHP代码的解释器。
+php代码必须放在WAMP根目录(www directory)下，因为本地的apache服务器是开在根目录下的，只有这里面才有PHP的执行环境，才有PHP代码的解释器。
 
 访问php文件需要通过localhost，localhost默认打开根目录下的index.php文件
 
@@ -58,14 +58,14 @@ localhost,root
 
 
 
-随机数据生成的API：<https://github.com/nuysoft/Mock/wiki/Mock.Random>
+MOCK(随机数据生成的API)：<https://github.com/nuysoft/Mock/wiki/Mock.Random>
 
 常用规则：
 
 * +1  表示数据id自动加一
 * 5   表示个数为5个，比如数组个数为5
 
-常用`初始值`：
+rap2常用`初始值`：
 
 - 随机图片 @image(290x340,@color,#fff,png,@word)
 - 随机名字 @title(10,20)  随机名字，长度为10到20
@@ -175,8 +175,6 @@ $comments = $_GET["comments"];
 $list = explode(',',$comments);
 ~~~
 
-
-
 ###### 字符串拼接：`.`
 
 使用.拼接
@@ -238,17 +236,27 @@ $str = substr($str,0,-1);//截取掉最后一个字符
 
 ##### 遍历索引数组
 
-~~~
+~~~php
 $arr = array('http://www.cnblogs.com/','博客园','PHP教程'); 
 foreach($arr as $value){ 
-echo $value.'<br />'; 
+	echo $value.'<br />'; 
 } 
 ~~~
 
 ##### 遍历关联数组
 
-~~~
-
+~~~php
+<?php
+$arr=array(
+    "Peter"=>"35",
+    "Ben"=>"37",
+    "Joe"=>"43"
+);
+foreach($arr as $x=>$x_value)
+{
+    echo "Key=".$x.",Value=".$x_value;
+    echo "<br>";
+}
 ~~~
 
 
@@ -299,8 +307,6 @@ echo $value.'<br />';
 
 mysql_num_rows($res)//获取行数
 
-
-
 ### ajax
 
 ##### 异步
@@ -336,6 +342,7 @@ ajax.open('GET','ajax.php?id=2',true);
 
 //3、send发送请求  get方式下参数为null，参数是拼接在URL中的，而post方式参数是放在send中
 ajax.send(null);
+// xmlhttp.send("name=zhang&age=27");
 
 //4监听状态的变化
 ajax.onreadystatechange = function(){
@@ -415,7 +422,7 @@ URL：协议://域名:端口号/路径名称?查询字符串#位置标识符
 
 ##### 解决跨域
 
-ajax请求存在的跨域问题，如在hbuider下访问Apache下的php文件，域名都是localhost，但是huilder的端口为8848，Apache的端口为80，存在跨域。
+ajax请求存在的跨域问题，如在hbuider下访问Apache下的php文件，域名都是localhost，但是hbuilder的端口为8848，Apache的端口为80，存在跨域。
 
 ~~~
 //hbuilder执行代码
@@ -473,7 +480,7 @@ fn1(5);
 
 ###### cors
 
-服务端(php)：设置响应头信息header("Access-Control-Allow-Origin:*");
+服务端(php)：设置响应头信息: header("Access-Control-Allow-Origin:*");
 
 前端：ajax
 
