--- a/三阶段/md文档/面向对象的三大特点.md
+++ b/三阶段/md文档/面向对象的三大特点.md
@@ -38,9 +38,9 @@ son.prototype = new dada(); //继承
 var xiaoming = new son()   //son的实例
 ```
 
-两个类之间，子类可以把prototype指向父类的示例。子类的实例就可以使用父类的所以方法，这样就可以完成最简单的继承。但是这样的缺点是无法接受参数，并且只能继承一个类，无法多个继承。
+两个类之间，子类可以把prototype指向父类的实例。子类的实例就可以使用父类的所以方法，这样就可以完成最简单的继承。但是这样的缺点是无法接受参数，并且只能继承一个类，无法多个继承。
 
-注：该方法的原理是让子类的prototype去引用父类的所有方法，就可以让子类的示例可以使用所有的方法。
+注：该方法的原理是让子类的prototype去引用父类的所有方法，就可以让子类的实例可以使用所有的方法。
 
 #### 2.构造继承
 
