--- a/三阶段/react/杂.md
+++ b/三阶段/react/杂.md
@@ -153,7 +153,7 @@ class MyClass {
 #### 请求阶段
 
 * 浏览器将url发送给DNS服务器
-* DNS服务器将域名解析为IP地址，并根据IP地址找到对应服务器
+* DNS服务器将域名解析为IP地址，并根据IP地址找到对应服务器，发起三次握手
 * 服务器接收到请求，客户端与服务器之间建立连接
 
 #### 响应阶段
@@ -177,7 +177,7 @@ class MyClass {
 
 #### 三次握手
 
-浏览器在给服务器传送数据之前，先进行三次握手，握手成功之后才可以传输数据
+浏览器在给服务器传送数据之前，先进行三次握手，握手成功之后才可以进行http请求
 
 * 浏览器先服务器发送SYN码，告诉服务器我要建立连接
 * 浏览器接收到SYN码，并返回客户端SYN+ACK码，表示我可以建立连接
@@ -192,8 +192,81 @@ class MyClass {
 * 服务端发送完毕之后，发送FIN给浏览器，告诉它数据发送完毕
 * 客户端接收完数据，同样发送ACK码给服务端，表示数据接收完毕，你可以关闭
 
+### HTTP与HTTPS
 
+* http是超文本传输协议，数据未加密，是明文传输。
+* https是具有安全性的ssl加密传输协议，在http的基础上添加了ssl加密层
+* http使用端口是80，https使用端口是443
 
+## 请求相关
+
+### dataType
+
+告诉服务器，前端想要获取的数据类型是什么。
+
+### Content-type常见
+
+(前端给后端的数据类型是什么)指定http/https发送数据至服务端的数据流类型，服务端根据编码类型进行解析获取数据。
+
+#### application/x-www-form-urlencoded
+
+常见POST提交数据的方法；原生form表单提交的默认值，提交的数据按照key1=val1&key2=val2 的方式进行编码
+
+#### multipart/form-data
+
+另一常见post提交数据的方式，使用from表单上传数据时，必须让from的enctyped等于这个值
+
+~~~html
+<from enctype="multipart/from-data">
+<input type="file" />
+</from>
+~~~
+
+#### application/json
+
+告诉服务端消息主体是序列化后的JSON字符串
+
+#### text/xml
+
+### from表单阻止默认事件
+
+* input标签的type设置为button
+
+  ~~~html
+  <input type="button" value="submit" />
+  ~~~
+
+* 表单内使用button标签，默认类型为submit，设置type="button"阻止提交
+
+  ~~~
+  <button type="button">submit</button>
+  ~~~
+
+* 使用preventDefault()
+
+  ~~~html
+  <from name="myfrom">
+  	<input type="submit" value="button" onclick="func(event)" />
+  </from>
+  <script>
+          function func(event){
+              event.preventDefault();
+          }
+  </script>
+  ~~~
+
+* 使用return false，注意onclick处是return func()
+
+  ~~~html
+  <from name="myfrom">
+  	<input type="submit" value="button" onclick="return func()" />
+  </from>
+  <script>
+          function func(){
+              return false;
+          }
+  </script>
+  ~~~
 
 
 react的setSate方法
