--- a/三阶段/wechat/小程序.md
+++ b/三阶段/wechat/小程序.md
@@ -191,10 +191,10 @@ this.setData({
 ~~~js
 onReachBottom: function () {
     this.setData({
-      page: this.data.page++
+        page: this.data.page++
     })
     this.getData()
-  },
+}
 ~~~
 
 ##### 下拉
@@ -204,7 +204,7 @@ onReachBottom: function () {
 ~~~js
 onPullDownRefresh: function () {
     console.log("向下拉")
-  },
+}
 ~~~
 
 #### 页面间传数据
@@ -349,6 +349,10 @@ app.js中设置
 
 ~~~js
  this.globalData.width = info.windowWidth
+//
+dlobalData:{
+    userInfo:""
+}
 ~~~
 
 页面中获取全局对象
@@ -389,18 +393,18 @@ wx.chooseLocation({
 
     ~~~js
      app.globalData.db.collection("xtt").add({
-          data:this.data.obj
-        }).then(() => {
-          console.log("ok")
-        })
+         data:this.data.obj
+     }).then(() => {
+         console.log("ok")
+     })
     ~~~
 
   * 取
 
     ~~~js
     app.globalData.db.collection("xtt").where({ _id: id }).get().then(res => {
-          console.log(res.data[0])
-        })
+        console.log(res.data[0])
+    })
     ~~~
 
 #### 组件
@@ -413,7 +417,7 @@ wx.chooseLocation({
 
 #### mpvue*
 
-#### WePY
+#### WePY  已经没有更新了
 
 
 
