--- a/面试总结.md
+++ b/面试总结.md
@@ -195,5 +195,45 @@ DOM操作，网络请求(ajax)，promise，I/O操作，定时器setTimeout/setIn
   }
   ~~~
 
-  
 
+##### vue-router与location.href区别
+
+* vue-router利用的history.pushState()实现，无刷新页面，静态跳转。
+* location.href跳转，简单，但是刷新了页面
+
+##### vue的hash/history模式
+
+* hash模式   #号后面的hash值变化，浏览器并不会发出请求，也不会刷新页面，每次hash值的变化，还会触发hashchange事件，然后对页面进行部分更新
+* history模式  利用h5的pushState实现，即使url发生变化也不会导致重新发起请求
+
+##### 后台给前端大量的数据，怎么处理
+
+大量数据时，可采用分页形式，按需请求，但是此问题不同于后台对数据的处理，而是需要前端做处理
+
+前端通过worker做子线程来实现，即worker开辟一条独立与主线程的子线程来进行数据的运算，这样不会影响主线程的执行，也就不会造成页面的卡顿。
+
+使用worker注意点：
+
+* 同源策略，worker运行的脚本文件必须与主线程的脚本文件同源
+* dom限制，无法读取主线程所在页面的dom对象，如document，window等
+* worker无法与主线程直接通信，必须通过消息完成
+* worker无法使用alert，confirm等方法，但是可以进行ajax请求
+* worker无法打开本地文件
+
+##### vue与react的区别
+
+* react是函数式的思想，状态都是通过参数传递，不可变，通过setState来进行修改，从而使页面重新渲染
+
+  vue是函数式的思想，对每个属性建立watcher来监听，当属性变化时更新对应虚拟dom，当state多的时候watch就多了，会导致卡顿，性能会下降。所以react更适合大型项目。
+
+* react通过js来操纵，通过js实现逻辑，生成HTML(jsx)，甚至是css
+
+  vue是单文件组件，将html，css，js写成一个单文件(.vue)，通过vue-loader来解析
+
+* react是类式的写法(状态，无状态组件)，api很少
+
+  vue是声明式的写法，通过传入各种option参数来声明
+
+* react做的很少很多交给社区去做
+
+  vue很多东西都是内置的，用起来很方便。
